# research-lab

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  index.js  package-lock.json  package.json  verify-project.sh
.cargo/: audit.toml  config.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml
adapters/: mod.rs
adapters/consumers/: benchmark_exchange.rs  data_vault.rs  mod.rs  observatory.rs  simulator.rs  test_bench.rs
config/: default.toml
contracts/: hypothesis.schema.json  metrics.schema.json
docs/: README.md
docs/api/: API_EXAMPLES.md  openapi.yaml
docs/architecture/: ADR-001-RUST-API-FRAMEWORK.md  ADR-002-DATABASE-ARCHITECTURE.md  ADR-003-SECURITY-ARCHITECTURE.md  ADR-004-OBSERVABILITY-ARCHITECTURE.md  (+1 more)
k8s/: README.md  clickhouse-statefulset.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  minio-deployment.yaml  namespace.yaml  pdb.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml  service.yaml
llm-research-api/: API_KEY_AUTHENTICATION.md  API_KEY_IMPLEMENTATION_SUMMARY.md  API_KEY_QUICK_REFERENCE.md  AUDIT_INTEGRATION_GUIDE.md  AUDIT_QUICK_REFERENCE.md  Cargo.toml  HEALTH_ARCHITECTURE.md  HEALTH_CHECKS.md  HEALTH_CHECKS_QUICK_REFERENCE.md  HEALTH_CHECK_IMPLEMENTATION_SUMMARY.md  METRICS_README.md  PERFORMANCE_MODULE.md  RBAC_GUIDE.md  RBAC_QUICK_REFERENCE.md
llm-research-api/examples/: api_key_usage.rs  audit_logging_example.rs  health_check_example.rs  jwt_auth_example.rs  kubernetes_health_integration.rs  metrics_usage.rs  performance_usage.rs  rbac_usage.rs  tracing_example.rs
llm-research-api/src/: dto.rs  error.rs  handlers.rs  lib.rs  security.rs
llm-research-api/src/dto/: dataset.rs  evaluation.rs  experiment.rs  model.rs  prompt.rs
llm-research-api/src/handlers/: datasets.rs  evaluations.rs  experiments.rs  models.rs  prompts.rs
llm-research-api/src/middleware/: auth.rs  logging.rs
llm-research-api/src/observability/: LOGGING_QUICK_REFERENCE.md  LOGGING_README.md  alerting.rs  health.rs  health_README.md  logging.rs  metrics.rs  mod.rs  tracing.rs
llm-research-api/src/performance/: cache.rs  mod.rs  pool.rs
llm-research-api/src/reliability/: backup.rs  bulkhead.rs  health_ext.rs  load_shedding.rs  mod.rs
llm-research-api/src/resilience/: EXAMPLES.md  QUICK_REFERENCE.md  README.md  circuit_breaker.rs  mod.rs  retry.rs  shutdown.rs  timeout.rs
llm-research-api/src/response/: EXAMPLES.md  MODULE_SUMMARY.md  README.md  compression.rs  indexing.rs  mod.rs  pagination.rs  query.rs
llm-research-api/src/security/: AUDIT_README.md  JWT_AUTH_README.md  api_key.rs  audit.rs  audit_middleware.rs  audit_query.rs  auth.rs  headers.rs  rate_limit.rs  rbac.rs  validation.rs
llm-research-api/tests/: README.md  api_key_tests.rs  dto_tests.rs  handler_tests.rs  integration_tests.rs  middleware_tests.rs
llm-research-cli/: Cargo.toml
llm-research-core/: Cargo.toml
llm-research-lab/: Cargo.toml
llm-research-lab/src/: config.rs  main.rs  server.rs
llm-research-metrics/: Cargo.toml
llm-research-metrics/src/: aggregators.rs  calculators.rs  lib.rs  statistical.rs
llm-research-metrics/src/calculators/: accuracy.rs  bleu.rs  latency.rs  perplexity.rs  rouge.rs
llm-research-metrics/tests/: accuracy_tests.rs  aggregator_tests.rs  bleu_tests.rs  calculator_tests.rs  rouge_tests.rs  statistical_comprehensive_tests.rs  statistical_tests.rs
llm-research-sdk/: Cargo.toml
llm-research-storage/: Cargo.toml
llm-research-storage/migrations/: 001_create_audit_log.sql
llm-research-storage/src/: clickhouse.rs  lib.rs  postgres.rs  repositories.rs  s3.rs
llm-research-storage/src/artifacts/: metadata.rs  repository.rs
llm-research-storage/src/repositories/: dataset.rs  evaluation.rs  experiment.rs  model.rs  prompt.rs  run.rs
llm-research-storage/src/timeseries/: events.rs  metrics.rs  mod.rs
llm-research-storage/tests/: clickhouse_unit_tests.rs  repository_unit_tests.rs  s3_unit_tests.rs
llm-research-storage/tests/common/: mod.rs
llm-research-storage/tests/integration/: mod.rs  postgres_tests.rs  s3_tests.rs  test_utils.rs
llm-research-workflow/: Cargo.toml
llm-research-workflow/src/: engine.rs  executor.rs  lib.rs  pipeline.rs  tasks.rs
llm-research-workflow/src/tasks/: data_loading.rs  evaluation.rs  inference.rs  reporting.rs
llm-research-workflow/tests/: engine_tests.rs  pipeline_tests.rs  task_tests.rs
migrations/: 001_create_users.sql  002_create_experiments.sql  003_create_runs.sql  004_create_datasets.sql  005_create_metrics.sql  006_create_artifacts.sql  007_create_indexes.sql
plans/: API_TEST_IMPLEMENTATION_SUMMARY.md  API_TEST_QUICK_REFERENCE.md  AUDIT_SYSTEM_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FILES_SUMMARY.md  DOCKER_K8S_QUICKSTART.md  LLM-Research-Lab-Architecture-Part1.md  LLM-Research-Lab-Architecture-Part2.md  LLM-Research-Lab-Completion.md  LLM-Research-Lab-Pseudocode-Part1.md  LLM-Research-Lab-Pseudocode-Part2.md  LLM-Research-Lab-Pseudocode-Part3.md  LLM-Research-Lab-Refinement.md  LLM-Research-Lab-Specification.md  LOGGING_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  QUICKSTART.md  README.rust.md  REVIEW_PROCESSES_README.md  RUST_PROJECT_SUMMARY.md  SPARC-Master-Specification.md  SPARC-Phase5-Completion-Sections-1-2.md  SPARC-Phase5-Section3-Deployment-Readiness.md  SPARC-Phase5-Section3-Deployment-Strategies-Smoke-Tests.md  SPARC-Phase5-Section4-Production-Infrastructure.md  SPARC-Phase5-Section5-Operations-Monitoring.md  SPARC-Phase5-Section6-Disaster-Recovery.md  SPARC-Phase5-Section7-Handoff-Knowledge-Transfer.md  SPARC-Phase5-Section8-Final-Validation-Sign-off.md  SPARC-Refinement-Complete-Index.md  SPARC-Refinement-Sections-10-11.md  Section-9-Iteration-Framework.md  TESTING.md  TEST_QUICK_REFERENCE.md  TEST_SUITE_SUMMARY.md  review-processes-quick-reference.md  review-processes-section8.md  review-processes-summary.md  review-processes-workflow-diagram.md  testing-strategy-completion.md
(+52 files in other folders)
