[package]
name = "llm-research-lab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
llm-research-core.workspace = true
llm-research-api.workspace = true
llm-research-storage.workspace = true
llm-research-metrics.workspace = true
llm-research-workflow.workspace = true

# Async runtime and HTTP
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Configuration
config.workspace = true

# Database
sqlx.workspace = true

# Storage
aws-sdk-s3.workspace = true
aws-config.workspace = true

[dev-dependencies]
