[package]
name = "llm-research-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
llm-research-core.workspace = true
llm-research-storage.workspace = true
llm-research-metrics.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async traits
async-trait.workspace = true

# Observability
tracing.workspace = true

# Numerics
rust_decimal.workspace = true

# Channels and concurrency
tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tokio-test.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
fake.workspace = true
mockall.workspace = true
